--- a/Commun/Test_des_fonctions/makefile
+++ b/Commun/Test_des_fonctions/makefile
@@ -1,6 +1,6 @@
 
 OBJ = gestion_matrice.o test_gestion_mat.o
-GM = gestion_matrice.c gestion_matrice.h
+GM = gestion_matrice.c gestion_matrice.h define.h
 CC = gcc
 CFLAGS = -g -Wall
 
@@ -10,7 +10,7 @@ test1: ${OBJ}
 gestion_matrice.o: ${GM}
 	${CC} -c gestion_matrice.c ${CFLAGS}
 
-test.o: test.c
+test_gestion_mat.o: test_gestion_mat.c
 	${CC} -c test_gestion_mat.c ${CFLAGS}
 
 clean :
