--- a/Commun/Test_des_fonctions/makefile_test_gestion_tour
+++ b/Commun/Test_des_fonctions/makefile_test_gestion_tour
@@ -2,7 +2,7 @@ OBJ = gestion_matrice.o gestion_tour.o test_Beta.o
 
 GM = gestion_matrice.c gestion_matrice.h define.h
 
-GT = gestion_tour.c gestion_tour.h coupPoss.c coupPoss.h define.h
+GT = gestion_tour.c gestion_tour.h define.h
 
 CP = coupPoss.c coupPoss.h define.h
 
@@ -19,7 +19,7 @@ coupPoss.o: ${CP}
 	${CC} -c coupPoss.c ${CFLAGS}
 
 gestion_tour.o: ${GT}
-	${CC} -c gestion_tour.c coupPoss.c ${CFLAGS}
+	${CC} -c gestion_tour.c ${CFLAGS}
 
 test_Beta.o: test_Beta.c
 	${CC} -c test_Beta.c ${CFLAGS}
