--- a/Commun/Test_des_fonctions/makefile_test_gestion_tour
+++ b/Commun/Test_des_fonctions/makefile_test_gestion_tour
@@ -4,7 +4,7 @@ GM = gestion_matrice.c gestion_matrice.h define.h
 
 GT = gestion_tour.c gestion_tour.h define.h
 
-CP = coupPoss.c coupPoss.h define.h
+CP = coup_possible_retourner.c coup_possible_retourner.h define.h
 
 CC = gcc
 CFLAGS = -g -Wall
@@ -15,8 +15,8 @@ test_Beta: ${OBJ}
 gestion_matrice.o: ${GM}
 	${CC} -c gestion_matrice.c ${CFLAGS}
 
-coupPoss.o: ${CP}
-	${CC} -c coupPoss.c ${CFLAGS}
+coup_possible_retourner.o: ${CP}
+	${CC} -c coup_possible_retourner.c ${CFLAGS}
 
 gestion_tour.o: ${GT}
 	${CC} -c gestion_tour.c ${CFLAGS}
