--- a/Commun/Test_des_fonctions/makefile_test_gestion_tour
+++ b/Commun/Test_des_fonctions/makefile_test_gestion_tour
@@ -1,8 +1,8 @@
-OBJ = gestion_matrice.o gestion_tour.o test_Beta.o
+OBJ = gestion_matrice.o gestion_tour.o test_Beta.o 
 
 GM = gestion_matrice.c gestion_matrice.h define.h
 
-GT = gestion_tour.c gestion_tour.h define.h
+GT = gestion_tour.c gestion_tour.h define.h joueur.h 
 
 CP = coup_possible_retourner.c coup_possible_retourner.h define.h
 
@@ -10,7 +10,7 @@ CC = gcc
 CFLAGS = -g -Wall
 
 test_Beta: ${OBJ}
-	${CC} -o test_Beta ${OBJ} -lm
+	${CC} -o test_Beta.c ${OBJ} -lm
 
 gestion_matrice.o: ${GM}
 	${CC} -c gestion_matrice.c ${CFLAGS}
